src/apple-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        image: denhamparry/apple:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
