src/banana-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana
        image: denhamparry/banana:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
