src/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: '/'
spec:
  rules:
  - host: demo.local
    http:
      paths:
      - path: /apple
        backend:
          serviceName: apple-service
          servicePort: 3000
      - path: /banana
        backend:
          serviceName: banana-service
          servicePort: 3000
      - path: /
        backend:
          serviceName: apple-service
          servicePort: 3000
